# mntviz

./: .gitattributes  .gitignore  README.md  USAGE.md  package.json
examples/sd258/000/matching/: sd258_000_11-00_latent_bad__sd258_000_11-01_template_bad.txt
examples/sd258/000/minutiae/: sd258_000_11-00_latent_bad.min  sd258_000_11-01_template_bad.min
python/: README.md  pyproject.toml
python/docs/assets/: sd258_000_latent_interactive.html  sd258_000_reference_interactive.html
python/notebooks/: mntviz_sd258_example.ipynb
python/src/mntviz/: __init__.py  plot.py
python/src/mntviz/_bundle/: mntviz.css  plots.bundle.js
python/tests/: test_io.py  test_plot_api.py
src/: colormaps.js  field-probe.js  index.js  match-viewer.js  minutiae-inspector.js  minutiae-renderer.js  mntviz.css  multi-viewer.js  overlay.js  plots.js  segments-renderer.js  singularity-renderer.js  uv-renderer.js  viewer.js
widget/: example.html  mntviz-widget.js
